[gd_scene load_steps=75 format=3 uid="uid://bjxhj32neycau"]

[ext_resource type="Script" path="res://Character/Player/player.gd" id="1_7c5n1"]
[ext_resource type="Texture2D" uid="uid://31d13x56ufwx" path="res://Character/Player/Character_Asset/Actor1.png" id="2_0qjyr"]
[ext_resource type="PackedScene" uid="uid://cxp32tjv0xv5n" path="res://scene/ability/lemparBotol_controller/lempar_botol_controller.tscn" id="2_botwl"]
[ext_resource type="Texture2D" uid="uid://lwblc1o283cl" path="res://Character/Player/Character_Asset/SiramAir.png" id="4_afmwc"]
[ext_resource type="Script" path="res://Character/Player/player_hitbox_atas.gd" id="6_3nybf"]
[ext_resource type="Texture2D" uid="uid://doiov7l26pmts" path="res://asset/environtment/light.png" id="6_86ekm"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_eewc5"]
light_mode = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0qruo"]
bg_color = Color(0.247059, 0.14902, 0.192157, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_siawd"]
bg_color = Color(0.905882, 0.266667, 0.207843, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.247059, 0.14902, 0.192157, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_eg6bi"]
atlas = ExtResource("2_0qjyr")
region = Rect2(432, 216, 48, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_oqpw3"]
atlas = ExtResource("2_0qjyr")
region = Rect2(480, 216, 48, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_5184k"]
atlas = ExtResource("2_0qjyr")
region = Rect2(528, 216, 48, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_lhxk5"]
atlas = ExtResource("2_0qjyr")
region = Rect2(432, 0, 48, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_dkrt2"]
atlas = ExtResource("2_0qjyr")
region = Rect2(480, 0, 48, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_ta4po"]
atlas = ExtResource("2_0qjyr")
region = Rect2(528, 0, 48, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_n3v5s"]
atlas = ExtResource("2_0qjyr")
region = Rect2(480, 216, 48, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_quc05"]
atlas = ExtResource("2_0qjyr")
region = Rect2(480, 0, 48, 82)

[sub_resource type="AtlasTexture" id="AtlasTexture_mfi44"]
atlas = ExtResource("2_0qjyr")
region = Rect2(480, 144, 48, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_vilia"]
atlas = ExtResource("2_0qjyr")
region = Rect2(480, 72, 48, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_0cqd5"]
atlas = ExtResource("2_0qjyr")
region = Rect2(432, 144, 48, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_q7w7w"]
atlas = ExtResource("2_0qjyr")
region = Rect2(480, 144, 48, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_2se1k"]
atlas = ExtResource("2_0qjyr")
region = Rect2(528, 144, 48, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_kt4b3"]
atlas = ExtResource("2_0qjyr")
region = Rect2(432, 72, 48, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_wsuwj"]
atlas = ExtResource("2_0qjyr")
region = Rect2(480, 72, 48, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_kfu0u"]
atlas = ExtResource("2_0qjyr")
region = Rect2(528, 72, 48, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_f73en"]
atlas = ExtResource("4_afmwc")
region = Rect2(32, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_71q6p"]
atlas = ExtResource("4_afmwc")
region = Rect2(160, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_m2mek"]
atlas = ExtResource("4_afmwc")
region = Rect2(288, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_x5f32"]
atlas = ExtResource("4_afmwc")
region = Rect2(416, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7y8mj"]
atlas = ExtResource("4_afmwc")
region = Rect2(544, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_afx0y"]
atlas = ExtResource("4_afmwc")
region = Rect2(672, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1naiu"]
atlas = ExtResource("4_afmwc")
region = Rect2(800, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_f77x7"]
atlas = ExtResource("4_afmwc")
region = Rect2(928, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_awhji"]
atlas = ExtResource("4_afmwc")
region = Rect2(32, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ths1"]
atlas = ExtResource("4_afmwc")
region = Rect2(160, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ic1ob"]
atlas = ExtResource("4_afmwc")
region = Rect2(288, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_unski"]
atlas = ExtResource("4_afmwc")
region = Rect2(416, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_75buw"]
atlas = ExtResource("4_afmwc")
region = Rect2(544, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xf16d"]
atlas = ExtResource("4_afmwc")
region = Rect2(672, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_i6kkg"]
atlas = ExtResource("4_afmwc")
region = Rect2(800, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_syt53"]
atlas = ExtResource("4_afmwc")
region = Rect2(928, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vfymc"]
atlas = ExtResource("4_afmwc")
region = Rect2(32, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xa0m1"]
atlas = ExtResource("4_afmwc")
region = Rect2(160, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_78vgj"]
atlas = ExtResource("4_afmwc")
region = Rect2(288, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qsh2u"]
atlas = ExtResource("4_afmwc")
region = Rect2(416, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_f6phg"]
atlas = ExtResource("4_afmwc")
region = Rect2(544, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mox6a"]
atlas = ExtResource("4_afmwc")
region = Rect2(672, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pqv5a"]
atlas = ExtResource("4_afmwc")
region = Rect2(800, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nmswe"]
atlas = ExtResource("4_afmwc")
region = Rect2(928, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_n830i"]
atlas = ExtResource("4_afmwc")
region = Rect2(32, 384, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_o33dq"]
atlas = ExtResource("4_afmwc")
region = Rect2(160, 384, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_faksl"]
atlas = ExtResource("4_afmwc")
region = Rect2(288, 384, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5coka"]
atlas = ExtResource("4_afmwc")
region = Rect2(416, 384, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wmywj"]
atlas = ExtResource("4_afmwc")
region = Rect2(544, 384, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ls6h"]
atlas = ExtResource("4_afmwc")
region = Rect2(672, 384, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_d6u0v"]
atlas = ExtResource("4_afmwc")
region = Rect2(800, 384, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_thgu7"]
atlas = ExtResource("4_afmwc")
region = Rect2(928, 384, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8btjo"]
atlas = ExtResource("4_afmwc")
region = Rect2(32, 512, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tdbr1"]
atlas = ExtResource("4_afmwc")
region = Rect2(160, 512, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6ey18"]
atlas = ExtResource("4_afmwc")
region = Rect2(288, 512, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jraji"]
atlas = ExtResource("4_afmwc")
region = Rect2(416, 512, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6gy0x"]
atlas = ExtResource("4_afmwc")
region = Rect2(544, 512, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_p4d3q"]
atlas = ExtResource("4_afmwc")
region = Rect2(672, 512, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_85qqs"]
atlas = ExtResource("4_afmwc")
region = Rect2(800, 512, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ibt44"]
atlas = ExtResource("4_afmwc")
region = Rect2(928, 512, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_452jj"]
atlas = ExtResource("4_afmwc")
region = Rect2(32, 640, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_dyxpy"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_eg6bi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oqpw3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5184k")
}],
"loop": true,
"name": &"atas",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lhxk5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dkrt2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ta4po")
}],
"loop": true,
"name": &"bawah",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_n3v5s")
}],
"loop": true,
"name": &"diam_atas",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_quc05")
}],
"loop": true,
"name": &"diam_bawah",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mfi44")
}],
"loop": true,
"name": &"diam_kanan",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vilia")
}],
"loop": true,
"name": &"diam_kiri",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0cqd5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q7w7w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2se1k")
}],
"loop": true,
"name": &"kanan",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kt4b3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wsuwj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kfu0u")
}],
"loop": true,
"name": &"kiri",
"speed": 7.0
}, {
"frames": [],
"loop": true,
"name": &"serang_atas",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"serang_bawah",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_f73en")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_71q6p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m2mek")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x5f32")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7y8mj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_afx0y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1naiu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f77x7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_awhji")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ths1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ic1ob")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_unski")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_75buw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xf16d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i6kkg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_syt53")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vfymc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xa0m1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_78vgj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qsh2u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f6phg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mox6a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pqv5a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nmswe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n830i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o33dq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_faksl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5coka")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wmywj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ls6h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d6u0v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_thgu7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8btjo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tdbr1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6ey18")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jraji")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6gy0x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p4d3q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_85qqs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ibt44")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_452jj")
}],
"loop": true,
"name": &"serang_kanan",
"speed": 40.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_jw6pm"]
radius = 3.0

[sub_resource type="CircleShape2D" id="CircleShape2D_my3qs"]
radius = 19.2354

[sub_resource type="CircleShape2D" id="CircleShape2D_1aifa"]
radius = 21.0

[sub_resource type="CircleShape2D" id="CircleShape2D_g61co"]
radius = 21.0238

[sub_resource type="CircleShape2D" id="CircleShape2D_nwtx7"]
radius = 21.0

[sub_resource type="CircleShape2D" id="CircleShape2D_afvx6"]
radius = 21.0238

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_orxg3"]
polygon = PackedVector2Array(-7, -15, -8, -9, -3, -2, -4, 2, -5, 7, -5, 10, -3, 10, 0, 6, 3, 10, 5, 9, 4, 5, 4, 2, 3, -1, 8, -7, 6, -11, 1, -14)

[node name="Player" type="CharacterBody2D" groups=["player"]]
y_sort_enabled = true
material = SubResource("CanvasItemMaterial_eewc5")
position = Vector2(0, -4)
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_7c5n1")

[node name="damage_diterima" type="Node2D" parent="."]
position = Vector2(-4, -18)

[node name="barDarah" type="ProgressBar" parent="."]
z_index = 30
custom_minimum_size = Vector2(30, 6)
offset_left = -15.0
offset_top = -30.0
offset_right = 15.0
offset_bottom = -24.0
pivot_offset = Vector2(15, 3)
theme_override_styles/background = SubResource("StyleBoxFlat_0qruo")
theme_override_styles/fill = SubResource("StyleBoxFlat_siawd")
value = 50.0
show_percentage = false
metadata/_edit_use_anchors_ = true

[node name="airIndikator" type="RichTextLabel" parent="."]
custom_minimum_size = Vector2(10, 10)
offset_left = -8.0
offset_top = 8.0
offset_right = 32.0
offset_bottom = 48.0
scale = Vector2(0.7, 0.7)
pivot_offset = Vector2(20, 20)
mouse_filter = 2
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 2
text = "0
"
metadata/_edit_use_anchors_ = true

[node name="PointLight2D" type="PointLight2D" parent="."]
visible = false
energy = 0.2
range_item_cull_mask = 7
shadow_enabled = true
shadow_filter_smooth = 50.0
shadow_item_cull_mask = 14
texture = ExtResource("6_86ekm")
texture_scale = 0.6

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(2.38419e-07, -6)
scale = Vector2(0.473958, 0.473958)
sprite_frames = SubResource("SpriteFrames_dyxpy")
animation = &"serang_kanan"
autoplay = "diam_bawah"
frame_progress = 0.088922

[node name="abilityManager" type="Node" parent="."]

[node name="lemparBotolController" parent="abilityManager" instance=ExtResource("2_botwl")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 4)
shape = SubResource("CircleShape2D_jw6pm")

[node name="player_hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="player_hitbox"]
position = Vector2(0, -6)
shape = SubResource("CircleShape2D_my3qs")

[node name="player_hitbox_atas" type="CollisionShape2D" parent="."]
position = Vector2(0, -37)
shape = SubResource("CircleShape2D_1aifa")
script = ExtResource("6_3nybf")

[node name="player_hitbox_bawah" type="CollisionShape2D" parent="."]
position = Vector2(32, -6)
shape = SubResource("CircleShape2D_g61co")
script = ExtResource("6_3nybf")

[node name="player_hitbox_kiri" type="CollisionShape2D" parent="."]
position = Vector2(-31, -6)
shape = SubResource("CircleShape2D_nwtx7")
script = ExtResource("6_3nybf")

[node name="player_hitbox_kanan" type="CollisionShape2D" parent="."]
position = Vector2(0, 25)
shape = SubResource("CircleShape2D_afvx6")
script = ExtResource("6_3nybf")

[node name="api_cooldown" type="Timer" parent="."]

[node name="deal_attack_timer" type="Timer" parent="."]
wait_time = 0.5

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource("OccluderPolygon2D_orxg3")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[connection signal="area_entered" from="player_hitbox" to="." method="_on_player_hitbox_area_entered"]
[connection signal="area_exited" from="player_hitbox" to="." method="_on_player_hitbox_area_exited"]
[connection signal="body_entered" from="player_hitbox" to="." method="_on_player_hitbox_body_entered"]
[connection signal="body_exited" from="player_hitbox" to="." method="_on_player_hitbox_body_exited"]
[connection signal="timeout" from="api_cooldown" to="." method="_on_api_cooldown_timeout"]
[connection signal="timeout" from="deal_attack_timer" to="." method="_on_deal_attack_timer_timeout"]
